# langchain-notes

./: .gitignore  README.md  pyproject.toml
tutorials/: llm_chain.ipynb  retrievers.ipynb
