[project]
name = "langchain-notes"
version = "0.1.0"
description = "LangChain Notes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[google-genai]>=0.3.27",
    "langchain-google-genai>=2.1.11",
    "langchain-community>=0.3.29",
    "pypdf>=6.0.0",
    "langchain-mongodb>=0.7.0",
]
